<?xml version="1.0"?>
<package>
  <name>carl_action_executor</name>
  <version>0.0.1</version>
  <description>Sequential action execution for the CARL robot.</description>

  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/carl_action_executor</url>
  <url type="bugtracker">https://github.com/GT-RAIL/carl_action_executor/issues</url>
  <url type="repository">https://github.com/GT-RAIL/carl_action_executor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>carl_dynamixel</build_depend>
  <build_depend>carl_moveit</build_depend>
  <build_depend>carl_navigation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>carl_dynamixel</run_depend>
  <run_depend>carl_moveit</run_depend>
  <run_depend>carl_navigation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  
</package>
